--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "lint:fix": "eslint --fix './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.0",
+    "@emotion/native": "^10.0.27",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "recoil": "^0.1.2",
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -26,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "babel-jest": "^26.6.1",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.12.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
